--- a/src/front/styles/QuienesSomos.css
+++ b/src/front/styles/QuienesSomos.css
@@ -84,7 +84,7 @@
   text-align: center;
 }
 
-.adoptedDog {
+.adoptedDogQuienesSomos {
   width: 70%;
   height: auto;
   margin-top: 5rem;
@@ -92,11 +92,11 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.centerDogAdopted {
+.centerDogAdoptedQuienesSomos {
   text-align: center;
 }
 
-.heartsSides {
+.heartsSidesQuienesSomos {
   margin-top: 15rem;
   width: 10vmax;
   height: 10vmax;
@@ -108,4 +108,15 @@
 
 .dudasSuge {
   margin-top: 2rem;
+}
+
+.contactQuienesSomos {
+  background-color: #f8d2c3;
+  border-radius: 15px;
+  padding: 1rem 1rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #f8d2c3;
+  color: black;
+  font-size: 1.1rem;
+  font-weight: bolder;
 }
