--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -9,7 +9,7 @@
   border-radius: 1rem;
   font-family: "Alegreya Sans", sans-serif;
   text-align: center;
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
 
 .Card_dogcardsbody {
@@ -95,6 +95,28 @@
   );
   width: 2.9rem;
   height: 2.9rem;
+}
+.Card_FavButton {
+  position: absolute;
+  top: 70%;
+  left: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3rem;
+  width: 3rem;
+  background: rgb(255, 0, 0);
+  background: linear-gradient(
+    360deg,
+    rgba(255, 0, 0, 1) 0%,
+    rgba(255, 127, 127, 1) 50%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  border-radius: 50%;
+}
+.Card_hearth {
+  width: 2.3rem;
+  height: 2.3rem;
 }
 
 #editPencil {
