--- a/src/front/styles/PerfilProtectora.css
+++ b/src/front/styles/PerfilProtectora.css
@@ -85,3 +85,21 @@
     display: none;
   }
 }
+.PerfilProtectora_addNewAnimal {
+  background-color: #f8d2c3;
+  border-radius: 15px;
+  padding: 1rem 1rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #f8d2c3;
+  color: black;
+  font-size: 1.4rem;
+  font-weight: bolder;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+
+  justify-content: center;
+  vertical-align: middle;
+  padding-top: 0;
+  font-size: 2rem;
+}
