--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -9,6 +9,7 @@ a,
 .spanNavbarLink {
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
 
 .contPrin {
@@ -55,26 +56,25 @@ a,
   width: 100%;
 }
 
-
-.navbar-circleone{
-  padding-left:  91%;
+.navbar-circleone {
+  padding-left: 91%;
   z-index: -1;
- position: absolute;
- 
- margin-top:0.5%;
- }
- 
- .navbar-circletwo{
+  position: absolute;
+
+  margin-top: 0.5%;
+}
+
+.navbar-circletwo {
   padding-left: 89%;
   padding-top: 7%;
 
   margin-top: -4%;
   z-index: -1;
- }
- 
- @media only screen and (max-width: 600px) {
-   .navbar-circleone, .navbar-circletwo {
-     
-     display: none;
-   }
- }
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar-circleone,
+  .navbar-circletwo {
+    display: none;
+  }
+}
