--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -132,3 +132,13 @@
     padding-top: 2rem;
   }
 }
+.Card_FavButton img {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.Card_FavButton:hover img {
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+}
