--- a/src/front/styles/QuienesSomos.css
+++ b/src/front/styles/QuienesSomos.css
@@ -121,3 +121,41 @@
   font-weight: bolder;
   margin-top: 2rem;
 }
+
+.centerTitleChappie {
+  width: 90%;
+  margin-bottom: 5rem;
+  display: flex;
+  padding-top: 8rem;
+  margin: auto;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.titleChappie {
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: 60px;
+  font-weight: bolder;
+  text-align: center;
+  margin-bottom: 4%;
+}
+
+.picChappie {
+  width: 50%;
+  height: auto;
+}
+
+.textoChappie {
+  margin-top: 4%;
+  font-family: "Alegreya Sans", sans-serif;
+  text-align: center;
+}
+
+.textoChappieDos {
+  margin-top: 4%;
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: bolder;
+}
