--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -7,6 +7,7 @@ nav {
 
 a,
 .spanNavbarLink {
+  font-size: 1.2rem;
   text-decoration: none;
   color: black;
   cursor: pointer;
@@ -29,13 +30,13 @@ a,
 }
 
 .logoNav {
-  width: 97px;
-  height: 97px;
+  width: 8%;
+  height: auto;
 }
 
 .navbarBrand {
   font-family: "Sansita Swashed", cursive;
-  font-size: larger;
+  font-size: 2rem;
   font-weight: bolder;
 }
 
