--- a/src/front/styles/deleteToFavoritesPoster.css
+++ b/src/front/styles/deleteToFavoritesPoster.css
@@ -1,17 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
-.addtofavoritesposter_wrap {
+.deletetofavoritesposter_wrap {
   width: 15rem;
   padding-top: 1%;
   border-radius: 5px;
-  box-shadow: 3px 3px green;
+  box-shadow: 3px 3px rgb(152, 152, 152);
   text-decoration: underline;
-  border: solid 2px rgb(141, 185, 141);
-  color: rgb(0, 59, 0);
-  background-color: rgb(75, 189, 75);
+  border: solid 2px rgb(200, 200, 200);
+  color: rgb(39, 39, 39);
+  background-color: rgb(129, 129, 129);
   margin-bottom: 2rem;
   position: fixed;
-  top: 20%;
+  top: 25%;
   left: 80%;
-  /* visibility: hidden; */
 }
