--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -66,11 +66,6 @@
   height: 0.9rem;
 }
 
-.editButton {
-  top: 70%;
-  left: 85%;
-  position: absolute;
-}
 .Card_FavButton {
   position: absolute;
   top: 70%;
@@ -131,4 +126,14 @@
 .Card_FavButton:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
+}
+
+/* class for cardForProfileShelter */
+.deleteanimal {
+  cursor: pointer;
+}
+.editButton {
+  top: 70%;
+  left: 85%;
+  position: absolute;
 }
