titulo chapie, card_with_info_shelters responsive

--- a/src/front/styles/card_with_info_shelters.css
+++ b/src/front/styles/card_with_info_shelters.css
@@ -1,10 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
 .cardWithInfo_wrapcard {
-  display: flex;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  display: grid;
+  place-items: center center;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   margin: auto;
   margin-top: 2rem;
-  width: 30%;
+  max-width: 35rem;
+  height: auto;
   border: solid 1px black;
   border-radius: 2rem;
   background-color: #f8d2c3;
@@ -13,9 +19,9 @@
   border: 1px solid black;
   background-color: white;
   width: 10em;
-  height: 10em;
+  height: auto;
   border-radius: 50%;
-  object-fit: cover;
+  margin-top: 1rem;
 }
 
 .cardWithInfo_placelog {
