--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -8,6 +8,7 @@ nav {
 a,
 .spanNavbarLink {
   font-size: 1.2rem;
+  font-weight: 500;
   text-decoration: none;
   color: black;
   cursor: pointer;
@@ -78,4 +79,15 @@ a,
   .navbar-circletwo {
     display: none;
   }
+}
+
+#userLogo {
+  margin-top: 0.4rem;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.dropdStyle {
+  font-family: "Alegreya Sans", sans-serif;
+  font-weight: bold;
 }
