--- a/src/front/styles/detaildog.css
+++ b/src/front/styles/detaildog.css
@@ -31,3 +31,36 @@
 .detaildog_info_list_label {
   color: rgba(229, 94, 47, 1);
 }
+.buttonContactShelterOne {
+  width: 15rem;
+  height: auto;
+  border-radius: 1rem;
+  font-family: "Alegreya Sans", sans-serif;
+  background-color: #f5c0ab;
+  border: solid black 1px;
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-top: 2rem;
+  margin-right: 3rem;
+  margin-bottom: 2rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.buttonContactShelterTwo {
+  text-decoration: none;
+  width: 15rem;
+  height: auto;
+  border-radius: 1rem;
+  font-family: "Alegreya Sans", sans-serif;
+  background-color: #f5c0ab;
+  border: solid black 1px;
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.ancorforbuttoncontact:hover {
+  text-decoration: none !important;
+}
